[new] Engine for searching images. Can do individual search or batch search.

--- a/config/retrieval.0001.vggfaces_full.cfg
+++ b/config/retrieval.0001.vggfaces_full.cfg
@@ -1,12 +1,12 @@
 [DEFAULT]
-expname=0001.vgg-face-full
+expname=desc1-DEEPFV
 
 [path]
-qfeature=/datasets/alberto/perf-prediction/vggface/retrieval/%(expname)s/features/query/
-qlist=/datasets/alberto/perf-prediction/vggface/retrieval/%(expname)s/features/query/VGG_idx_query.out
-dbfeature=/datasets/alberto/perf-prediction/vggface/retrieval/%(expname)s/features/collection/
-dblist=/datasets/alberto/perf-prediction/vggface/retrieval/%(expname)s/features/collection/VGG_idx_.out
-outdir=/datasets/alberto/perf-prediction/vggface/retrieval/%(expname)s/
+qfeature=/home/alberto/phD/datasets/vggfaces/%(expname)s/features/query/
+qlist=/home/alberto/phD/datasets/vggfaces/%(expname)s/features/query/VGG_idx_query.out
+dbfeature=/home/alberto/phD/datasets/vggfaces/%(expname)s/features/collection/
+dblist=/home/alberto/phD/datasets/vggfaces/%(expname)s/features/collection/VGG_idx_.out
+outdir=/home/alberto/phD/datasets/vggfaces/%(expname)s/
 
 [index]
 index_type=KDFOREST
