[fix] Little fix to engine

--- a/config/retrieval.0001.vggfaces_full.cfg
+++ b/config/retrieval.0001.vggfaces_full.cfg
@@ -15,14 +15,15 @@ lib=cv
 
 [search]
 search_type=knn
-knn=1000
+knn=10000
 radius_factor=1.0
 
 [rank]
 score_type=distance
-limit=1000
-exclude_first=False
-exclude_zero=True
+limit=10000
 
 [eval]
 k=1000
+
+[fit]
+t=1000
